@@ -1,136 +1,157 @@
 package org.gradle.profiler.studio;
 
-import com.google.common.base.Joiner;
+import org.gradle.internal.Pair;
 import org.gradle.profiler.BuildAction.BuildActionResult;
-import org.gradle.profiler.CommandExec;
 import org.gradle.profiler.GradleBuildConfiguration;
 import org.gradle.profiler.GradleClient;
 import org.gradle.profiler.InvocationSettings;
-import org.gradle.profiler.Logging;
-import org.gradle.profiler.OperatingSystem;
-import org.gradle.profiler.client.protocol.Server;
 import org.gradle.profiler.client.protocol.ServerConnection;
 import org.gradle.profiler.client.protocol.messages.GradleInvocationCompleted;
 import org.gradle.profiler.client.protocol.messages.GradleInvocationParameters;
-import org.gradle.profiler.client.protocol.messages.StudioAgentConnectionParameters;
+import org.gradle.profiler.client.protocol.messages.GradleInvocationStarted;
 import org.gradle.profiler.client.protocol.messages.StudioRequest;
 import org.gradle.profiler.client.protocol.messages.StudioSyncRequestCompleted;
+import org.gradle.profiler.client.protocol.messages.StudioSyncRequestCompleted.StudioSyncRequestResult;
+import org.gradle.profiler.instrument.GradleInstrumentation;
+import org.gradle.profiler.studio.process.StudioProcess.StudioConnections;
+import org.gradle.profiler.studio.process.StudioProcessController;
 import org.gradle.profiler.studio.tools.StudioPluginInstaller;
 import org.gradle.profiler.studio.tools.StudioSandboxCreator;
 import org.gradle.profiler.studio.tools.StudioSandboxCreator.StudioSandbox;
 
-import java.io.Closeable;
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicBoolean;
 
-import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.gradle.profiler.client.protocol.messages.StudioRequest.StudioRequestType.CLEANUP_CACHE;
 import static org.gradle.profiler.client.protocol.messages.StudioRequest.StudioRequestType.EXIT_IDE;
 import static org.gradle.profiler.client.protocol.messages.StudioRequest.StudioRequestType.SYNC;
 
 public class StudioGradleClient implements GradleClient {
 
-    private static final Duration AGENT_CONNECT_TIMEOUT = Duration.ofMinutes(1);
-    private static final Duration SYNC_STARTED_TIMEOUT = Duration.ofMinutes(10);
-    private static final Duration GRADLE_INVOCATION_COMPLETED_TIMEOUT = Duration.ofMinutes(60);
-    private static final Duration SYNC_REQUEST_COMPLETED_TIMEOUT = Duration.ofMinutes(60);
-    private static final long STUDIO_EXIT_TIMEOUT_SECONDS = 60;
-
-    private final Server studioAgentServer;
-    private final Server studioPluginServer;
-    private final CommandExec.RunHandle studioProcess;
-    private final ServerConnection studioAgentConnection;
-    private final ServerConnection studioPluginConnection;
-    private final StudioPluginInstaller studioPluginInstaller;
-
-    public StudioGradleClient(GradleBuildConfiguration buildConfiguration, InvocationSettings invocationSettings) {
-        if (!OperatingSystem.isMacOS()) {
-            throw new IllegalArgumentException("Support for Android studio is currently only implemented on macOS.");
-        }
-        Path studioInstallDir = invocationSettings.getStudioInstallDir().toPath();
-        Optional<File> studioSandboxDir = invocationSettings.getStudioSandboxDir();
-        Logging.startOperation("Starting Android Studio at " + studioInstallDir);
-        studioPluginServer = new Server("plugin");
-        studioAgentServer = new Server("agent");
-        StudioSandbox sandbox = StudioSandboxCreator.createSandbox(studioSandboxDir.map(File::toPath).orElse(null));
-        LaunchConfiguration launchConfiguration = new LauncherConfigurationParser().calculate(studioInstallDir, sandbox, studioPluginServer.getPort());
-        System.out.println();
-        System.out.println("* Java command: " + launchConfiguration.getJavaCommand());
-        System.out.println("* Classpath:");
-        for (Path entry : launchConfiguration.getClassPath()) {
-            System.out.println("  " + entry);
-        }
-        System.out.println("* System properties:");
-        for (Map.Entry<String, String> entry : launchConfiguration.getSystemProperties().entrySet()) {
-            System.out.println("  " + entry.getKey() + " -> " + entry.getValue());
-        }
-        System.out.println("* Main class: " + launchConfiguration.getMainClass());
-
-        studioPluginInstaller = new StudioPluginInstaller(launchConfiguration.getStudioPluginsDir());
-        studioProcess = startStudio(launchConfiguration, studioInstallDir, invocationSettings, studioAgentServer);
-        studioPluginConnection = studioPluginServer.waitForIncoming(AGENT_CONNECT_TIMEOUT);
-        studioAgentConnection = studioAgentServer.waitForIncoming(AGENT_CONNECT_TIMEOUT);
-        studioAgentConnection.send(new StudioAgentConnectionParameters(buildConfiguration.getGradleHome()));
+    public enum CleanCacheMode {
+        BEFORE_SCENARIO,
+        BEFORE_BUILD,
+        NEVER
     }
 
-    private CommandExec.RunHandle startStudio(LaunchConfiguration launchConfiguration, Path studioInstallDir, InvocationSettings invocationSettings, Server server) {
-        List<String> commandLine = new ArrayList<>();
-        commandLine.add(launchConfiguration.getJavaCommand().toString());
-        commandLine.add("-cp");
-        commandLine.add(Joiner.on(File.pathSeparator).join(launchConfiguration.getClassPath()));
-        for (Map.Entry<String, String> systemProperty : launchConfiguration.getSystemProperties().entrySet()) {
-            commandLine.add("-D" + systemProperty.getKey() + "=" + systemProperty.getValue());
-        }
-        commandLine.add("-javaagent:" + launchConfiguration.getAgentJar() + "=" + server.getPort() + "," + launchConfiguration.getSupportJar());
-        commandLine.add("--add-exports");
-        commandLine.add("java.base/jdk.internal.misc=ALL-UNNAMED");
-        commandLine.add("-Xbootclasspath/a:" + Joiner.on(File.pathSeparator).join(launchConfiguration.getSharedJars()));
-        commandLine.add(launchConfiguration.getMainClass());
-        commandLine.add(invocationSettings.getProjectDir().getAbsolutePath());
-        System.out.println("* Android Studio logs can be found at: " + Paths.get(launchConfiguration.getStudioLogsDir().toString(), "idea.log"));
-        System.out.println("* Using command line: " + commandLine);
+    private static final Duration CACHE_CLEANUP_COMPLETED_TIMEOUT = Duration.ofSeconds(60);
+    private static final Duration GRADLE_INVOCATION_STARTED_TIMEOUT = Duration.ofMillis(100);
+    private static final Duration GRADLE_INVOCATION_COMPLETED_TIMEOUT = Duration.ofMinutes(60);
+    private static final Duration SYNC_REQUEST_COMPLETED_TIMEOUT = Duration.ofMinutes(90);
 
-        studioPluginInstaller.installPlugin(launchConfiguration.getStudioPluginJars());
-        return new CommandExec().inDir(studioInstallDir.toFile()).start(commandLine);
+    private final StudioProcessController processController;
+    private final StudioPluginInstaller studioPluginInstaller;
+    private final CleanCacheMode cleanCacheMode;
+    private final ExecutorService executor;
+    private boolean isFirstRun;
+
+    public StudioGradleClient(GradleBuildConfiguration buildConfiguration, InvocationSettings invocationSettings, CleanCacheMode cleanCacheMode) {
+        this.isFirstRun = true;
+        this.cleanCacheMode = cleanCacheMode;
+        Path studioInstallDir = invocationSettings.getStudioInstallDir().toPath();
+        Optional<File> studioSandboxDir = invocationSettings.getStudioSandboxDir();
+        StudioSandbox sandbox = StudioSandboxCreator.createSandbox(studioSandboxDir.map(File::toPath).orElse(null));
+        Path protocolJar = GradleInstrumentation.unpackPlugin("client-protocol").toPath();
+        Path studioPlugin = GradleInstrumentation.unpackPlugin("studio-plugin").toPath();
+        this.studioPluginInstaller = new StudioPluginInstaller(sandbox.getPluginsDir());
+        studioPluginInstaller.installPlugin(Arrays.asList(studioPlugin, protocolJar));
+        this.processController = new StudioProcessController(studioInstallDir, sandbox, invocationSettings, buildConfiguration);
+        this.executor = Executors.newSingleThreadExecutor();
+    }
+
+    public BuildActionResult sync(List<String> gradleArgs, List<String> jvmArgs) {
+        if (shouldCleanCache()) {
+            processController.runAndWaitToStop((connections) -> {
+                System.out.println("* Cleaning Android Studio cache, this will require a restart...");
+                connections.getPluginConnection().send(new StudioRequest(CLEANUP_CACHE));
+                connections.getPluginConnection().receiveCacheCleanupCompleted(CACHE_CLEANUP_COMPLETED_TIMEOUT);
+                connections.getPluginConnection().send(new StudioRequest(EXIT_IDE));
+            });
+        }
+
+        isFirstRun = false;
+        return processController.run((connections) -> {
+            System.out.println("* Running sync in Android Studio...");
+            connections.getPluginConnection().send(new StudioRequest(SYNC));
+            System.out.println("* Sent sync request");
+            Pair<StudioSyncRequestResult, BuildActionResult> pair = waitForSyncToFinish(connections, gradleArgs, jvmArgs);
+            StudioSyncRequestResult syncRequestResult = pair.getLeft();
+            BuildActionResult durationResult = pair.getRight();
+            long fullGradleDuration = durationResult.getGradleToolingAgentExecutionTime().stream()
+                .mapToLong(Duration::toMillis)
+                .sum();
+            System.out.printf("* Full Gradle execution time: %dms%n", fullGradleDuration);
+            System.out.printf("* Full IDE execution time: %dms%n", durationResult.getIdeExecutionTime().get().toMillis());
+            System.out.printf("* Full sync has completed in: %dms and it %s%n", durationResult.getExecutionTime().toMillis(), syncRequestResult);
+            return durationResult;
+        });
+    }
+
+    private Pair<StudioSyncRequestResult, BuildActionResult> waitForSyncToFinish(StudioConnections connections, List<String> gradleArgs, List<String> jvmArgs) {
+        System.out.println("* Sync has started, waiting for it to complete...");
+        AtomicBoolean isSyncRequestCompleted = new AtomicBoolean();
+        CompletableFuture<List<Duration>> gradleInvocations = CompletableFuture.supplyAsync(() -> collectGradleInvocations(connections, isSyncRequestCompleted, gradleArgs, jvmArgs), executor);
+        StudioSyncRequestCompleted syncRequestCompleted = connections.getPluginConnection().receiveSyncRequestCompleted(SYNC_REQUEST_COMPLETED_TIMEOUT);
+        isSyncRequestCompleted.set(true);
+        List<Duration> gradleInvocationDurations = gradleInvocations.join();
+        long fullGradleDuration = gradleInvocationDurations.stream()
+            .mapToLong(Duration::toMillis)
+            .sum();
+        BuildActionResult result = BuildActionResult.withIdeTimings(
+            Duration.ofMillis(syncRequestCompleted.getDurationMillis()),
+            gradleInvocationDurations,
+            Duration.ofMillis(syncRequestCompleted.getDurationMillis() - fullGradleDuration)
+        );
+        return Pair.of(syncRequestCompleted.getResult(), result);
+    }
+
+    private List<Duration> collectGradleInvocations(StudioConnections connections, AtomicBoolean isSyncRequestCompleted, List<String> gradleArgs, List<String> jvmArgs) {
+        List<Duration> durations = new ArrayList<>();
+        int invocation = 1;
+        ServerConnection agentConnection = connections.getAgentConnection();
+        while (!isSyncRequestCompleted.get()) {
+            Optional<GradleInvocationStarted> invocationStarted = agentConnection.maybeReceiveGradleInvocationStarted(GRADLE_INVOCATION_STARTED_TIMEOUT);
+            if (invocationStarted.isPresent()) {
+                System.out.printf("* Gradle invocation %s has started, waiting for it to complete...%n", invocation);
+                agentConnection.send(new GradleInvocationParameters(gradleArgs, jvmArgs));
+                GradleInvocationCompleted agentCompleted = agentConnection.receiveGradleInvocationCompleted(GRADLE_INVOCATION_COMPLETED_TIMEOUT);
+                System.out.printf("* Gradle invocation %s has completed in: %sms%n", invocation++, agentCompleted.getDurationMillis());
+                durations.add(Duration.ofMillis(agentCompleted.getDurationMillis()));
+            }
+        }
+        return durations;
+    }
+
+    private boolean shouldCleanCache() {
+        return isFirstRun && cleanCacheMode == CleanCacheMode.BEFORE_SCENARIO
+            || cleanCacheMode == CleanCacheMode.BEFORE_BUILD;
     }
 
     @Override
     public void close() {
-        try (Server studioPluginServer = this.studioPluginServer;
-             Server studioAgentServer = this.studioAgentServer;
-             Closeable uninstallPlugin = studioPluginInstaller::uninstallPlugin) {
-            System.out.println("* Stopping Android Studio....");
-            studioPluginConnection.send(new StudioRequest(EXIT_IDE));
-            studioProcess.waitForSuccess(STUDIO_EXIT_TIMEOUT_SECONDS, SECONDS);
-            System.out.println("* Android Studio stopped.");
+        try {
+            executor.shutdown();
+            if (processController.isProcessRunning()) {
+                processController.runAndWaitToStop((connections) -> {
+                    System.out.println("* Stopping Android Studio....");
+                    connections.getPluginConnection().send(new StudioRequest(EXIT_IDE));
+                    System.out.println("* Android Studio stopped.");
+                });
+            }
         } catch (Exception e) {
             e.printStackTrace();
             System.out.println("* Android Studio did not finish successfully, you will have to close it manually.");
+        } finally {
+            studioPluginInstaller.uninstallPlugin();
         }
-    }
-
-    public BuildActionResult sync(List<String> gradleArgs, List<String> jvmArgs) {
-        System.out.println("* Running sync in Android Studio...");
-        studioPluginConnection.send(new StudioRequest(SYNC));
-        System.out.println("* Sent sync request");
-        // Use a long time out because it can take quite some time
-        // between the tapi action completing and studio finishing the sync
-        studioAgentConnection.receiveSyncStarted(SYNC_STARTED_TIMEOUT);
-        studioAgentConnection.send(new GradleInvocationParameters(gradleArgs, jvmArgs));
-        System.out.println("* Sync has started, waiting for it to complete...");
-        GradleInvocationCompleted agentCompleted = studioAgentConnection.receiveGradleInvocationCompleted(GRADLE_INVOCATION_COMPLETED_TIMEOUT);
-        System.out.println("* Gradle invocation has completed in: " + agentCompleted.getDurationMillis() + "ms");
-        StudioSyncRequestCompleted syncRequestCompleted = studioPluginConnection.receiveSyncRequestCompleted(SYNC_REQUEST_COMPLETED_TIMEOUT);
-        System.out.println("* Full sync has completed in: " + syncRequestCompleted.getDurationMillis() + "ms and it " + syncRequestCompleted.getResult().name().toLowerCase());
-        return BuildActionResult.withIdeTimings(
-            Duration.ofMillis(syncRequestCompleted.getDurationMillis()),
-            Duration.ofMillis(agentCompleted.getDurationMillis()),
-            Duration.ofMillis(syncRequestCompleted.getDurationMillis() - agentCompleted.getDurationMillis())
-        );
     }
 }
